# AllisterML

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
assets/: logo.icns
data/: download_dataset.ipynb
data/boston_housing/: config.yaml  results.csv  source.txt
data/breast_cancer/: config.yaml  results.csv
data/carprice/: config.yaml  results.csv  source.txt
data/diabete/: config.yaml  results.csv  specific_transformations.py
data/iris/: config.yaml  results.csv
data/student_performance/: config.yaml  results.csv
data/titanic/: config.yaml  results.csv  source.txt
data/wine/: config.yaml  results.csv  source.txt
notebooks/: main.ipynb
src/: config_loading.py  data_loading.py  eda.py  evaluation.py  feature_engineering.py  logging_setup.py  mlflow_setup.py  preprocessing.py  training.py
templates/: config_template.yaml
